SUREFIRE-1909 Support JUnit 5 reflection access by changing add-exports to add-opens
Signed-off-by: Nils Renaud <renaud.nils@gmail.com>